[metadata]
name=PyOpenGL-Demo
version=3.1.1
description=Demonstration scripts for the PyOpenGL library
long_description = file: README.md 
long_description_content_type=text/markdown
url=https://github.com/mcfletch/pyopengl-demo
license=BSD
maintainer=Mike C. Fletcher
maintainer_email=mcfletch@vrplumber.com

[options]
zip_safe=False
include_package_data = True
install_requires=
    six
    PyOpenGL
[sdist]
formats=gztar
